--- a/TourGuide/app/src/main/res/values/strings.xml
+++ b/TourGuide/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">TourGuide</string>
+    <string name="app_name">Tour Guide</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="attractions">Attractions</string>
+    <string name="transport">Transport</string>
+    <string name="emergency">Emergency</string>
+    <string name="accommodation">Accommodation</string>
+    <string name="details">Details</string>
+    <string name="title_activity_details">Details</string>
 </resources>
