--- a/TourGuide/app/src/main/res/values/strings.xml
+++ b/TourGuide/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tour Guide</string>
+    <string name="app_name">GYD me</string>
     <string name="action_settings">Settings</string>
     <string name="attractions">Attractions</string>
     <string name="transport">Transport</string>
